# SmartTasker

./: .gitignore  README.md  data.sqlite3  pyproject.toml
src/models/: __init__.py  ai_processor.py  db_manager.py  model.py  prompts.py  task_manager.py  utills.py
src/services/: database_service.py  db_service.py  db_setup.py
src/tests/: test_task_manager.py  test_task_manager_goal.py  test_task_manager_task.py  test_task_manager_task_history.py
tests/: test_task_crud.py  test_time_block_crud.py
