[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SmartTasker"
version = "0.1.0"
description = "A smart task management system"
requires-python = ">=3.7"
dependencies = [
    "sqlmodel",
    "aiosqlite",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false
