[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SmartTasker"
version = "0.1.0"
description = "A smart task management system"
requires-python = ">=3.7"
dependencies = [
    "aiosqlite>=0.19.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.2",
    "sqlmodel>=0.0.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false
